{
    "name": "Controls",
    "maps": [
        {
            "name": "Ingame",
            "id": "6ead090b-7e83-4e98-bb2e-3dd299876a50",
            "actions": [
                {
                    "name": "butt1",
                    "type": "Button",
                    "id": "111cd7b1-2fd9-4f12-9a73-3eb719373f21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "butt2",
                    "type": "Button",
                    "id": "75b55cf0-9fb5-4b7f-b381-6c3936833ad3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "butt3",
                    "type": "Button",
                    "id": "328ca0b3-61ad-4dc4-b6a1-a36f9b130f85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "53eec967-451f-47ec-89f1-9fd4285dc7b6",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "butt1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78cdfe77-762f-43fd-9f01-4323c6478fb6",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "butt2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4c28643-9025-41c5-acf5-7e80976ce8e7",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "butt3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}